--- a/Heart-up/ShabonContents/ShabonContentsTableViewCell.xib
+++ b/Heart-up/ShabonContents/ShabonContentsTableViewCell.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -21,14 +20,14 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wek-dV-XRV">
-                        <rect key="frame" x="0.0" y="24" width="50" height="50"/>
+                        <rect key="frame" x="5" y="24" width="50" height="50"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="Bto-Ng-Xza"/>
                             <constraint firstAttribute="height" constant="50" id="u2h-Sx-2zG"/>
                         </constraints>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bvq-F7-ZiH">
-                        <rect key="frame" x="58" y="10" width="302" height="78"/>
+                        <rect key="frame" x="63" y="10" width="297" height="88"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2fK-AO-BOb">
                                 <rect key="frame" x="97" y="8" width="210" height="62"/>
@@ -101,12 +100,12 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="bvq-F7-ZiH" firstAttribute="leading" secondItem="wek-dV-XRV" secondAttribute="trailing" constant="8" id="3UF-8Y-0n8"/>
+                    <constraint firstItem="wek-dV-XRV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-11" id="PWI-KM-ZSB"/>
                     <constraint firstItem="wek-dV-XRV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="24" id="gYW-jT-OiD"/>
                     <constraint firstAttribute="trailingMargin" secondItem="bvq-F7-ZiH" secondAttribute="trailing" constant="-9" id="gwv-Be-08Z"/>
                     <constraint firstAttribute="bottom" secondItem="wek-dV-XRV" secondAttribute="bottom" constant="25.5" id="lm9-Q7-7nl"/>
                     <constraint firstItem="bvq-F7-ZiH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-1" id="oNx-OP-tJ6"/>
-                    <constraint firstItem="wek-dV-XRV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="pDL-bW-L81"/>
-                    <constraint firstItem="bvq-F7-ZiH" firstAttribute="centerY" secondItem="wek-dV-XRV" secondAttribute="centerY" id="z67-wi-v4g"/>
+                    <constraint firstItem="bvq-F7-ZiH" firstAttribute="centerY" secondItem="wek-dV-XRV" secondAttribute="centerY" constant="5" id="z67-wi-v4g"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
