とりまリアクションのエラー処理とhappyGraduationの花火を飛ばす処理を削除

--- a/Heart-up/Base.lproj/Main.storyboard
+++ b/Heart-up/Base.lproj/Main.storyboard
@@ -1038,7 +1038,7 @@
         <image name="shabon" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="zVW-er-emc"/>
-        <segue reference="Uby-AE-S2X"/>
+        <segue reference="Ubo-jr-8fC"/>
+        <segue reference="ypq-AQ-sHG"/>
     </inferredMetricsTieBreakers>
 </document>
