--- a/Heart-up/Login.storyboard
+++ b/Heart-up/Login.storyboard
@@ -45,9 +45,9 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="エラーエラー" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M2O-5C-G9j">
-                                <rect key="frame" x="135" y="246" width="104" height="33"/>
+                                <rect key="frame" x="16" y="246" width="335" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -85,22 +85,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dlo-oz-fC0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="33" y="788"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="0BJ-Hv-3KW">
-            <objects>
-                <viewController id="GL7-Nr-kFE" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="7Qq-yk-bOu">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="vAj-3F-7bc"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="aQX-6q-Sfl" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1889" y="430"/>
+            <point key="canvasLocation" x="32.799999999999997" y="787.55622188905556"/>
         </scene>
         <!--User Resister View Controller-->
         <scene sceneID="og4-cs-olc">
@@ -263,64 +248,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wKD-jD-vfU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="772" y="1004.7976011994003"/>
-        </scene>
-        <!--Root View Controller-->
-        <scene sceneID="0ts-be-7CE">
-            <objects>
-                <tableViewController clearsSelectionOnViewWillAppear="NO" id="sGk-Ok-VyN" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="kGj-CF-mqB">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="tuS-4s-X3r">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tuS-4s-X3r" id="yIH-P1-aAC">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="sGk-Ok-VyN" id="nsV-cy-NIw"/>
-                            <outlet property="delegate" destination="sGk-Ok-VyN" id="siM-Xt-Jf8"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="6X7-Rq-y05"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="OXn-sc-Rxa" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1729" y="1005"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="hqi-NF-4b2">
-            <objects>
-                <navigationController id="XoR-66-ZHS" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="68d-aH-w89">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="sGk-Ok-VyN" kind="relationship" relationship="rootViewController" id="9Fa-c0-eux"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="fpo-si-hcr" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1889" y="736"/>
-        </scene>
-        <!--Split View Controller-->
-        <scene sceneID="OTL-2H-7Mt">
-            <objects>
-                <splitViewController id="vQY-Nb-0xf" sceneMemberID="viewController">
-                    <connections>
-                        <segue destination="XoR-66-ZHS" kind="relationship" relationship="masterViewController" id="C6N-do-cao"/>
-                        <segue destination="GL7-Nr-kFE" kind="relationship" relationship="detailViewController" id="pqE-Bj-mAH"/>
-                    </connections>
-                </splitViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Beg-0d-qSr" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1975" y="736"/>
         </scene>
     </scenes>
 </document>
