MyShabonListのリファクタリングと errorCheckと errorViewDisplayとreloadViewのファイルを別クラスにまとめた

--- a/Heart-up/Base.lproj/Main.storyboard
+++ b/Heart-up/Base.lproj/Main.storyboard
@@ -1055,6 +1055,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="zVW-er-emc"/>
-        <segue reference="ypq-AQ-sHG"/>
+        <segue reference="UIR-Rk-hcD"/>
     </inferredMetricsTieBreakers>
 </document>
