returnButtonのコンスとラインとを修正

--- a/Heart-up/Base.lproj/Main.storyboard
+++ b/Heart-up/Base.lproj/Main.storyboard
@@ -965,11 +965,8 @@
                                     <action selector="resultSubmitAction:" destination="zzc-Xt-KtZ" eventType="touchUpInside" id="qXR-fm-cgz"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f7e-zS-Q39">
-                                <rect key="frame" x="16" y="606" width="56" height="2"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="56" id="k3f-84-pqL"/>
-                                </constraints>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f7e-zS-Q39">
+                                <rect key="frame" x="16" y="581" width="45" height="27"/>
                                 <connections>
                                     <action selector="returnContents:" destination="zzc-Xt-KtZ" eventType="touchUpInside" id="gKD-Uv-nPQ"/>
                                 </connections>
@@ -978,24 +975,25 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="fYf-Jz-pOs" firstAttribute="top" relation="greaterThanOrEqual" secondItem="AE7-b5-edp" secondAttribute="bottom" constant="8" id="2Ba-9k-q4t"/>
-                            <constraint firstItem="f7e-zS-Q39" firstAttribute="leading" secondItem="YwR-R9-1sk" secondAttribute="leading" constant="16" id="7Pd-Rb-EXH"/>
                             <constraint firstItem="YwR-R9-1sk" firstAttribute="trailing" secondItem="qG6-OY-rwd" secondAttribute="trailing" constant="16" id="GYg-4v-f7N"/>
                             <constraint firstItem="lkv-A2-V8E" firstAttribute="leading" secondItem="YwR-R9-1sk" secondAttribute="leading" constant="31" id="IKt-jE-9VA"/>
+                            <constraint firstItem="f7e-zS-Q39" firstAttribute="top" secondItem="t6k-CY-2lc" secondAttribute="bottom" constant="62" id="JpW-4u-UFW"/>
                             <constraint firstItem="AE7-b5-edp" firstAttribute="top" secondItem="YwR-R9-1sk" secondAttribute="top" id="KwW-9x-K5a"/>
-                            <constraint firstItem="YwR-R9-1sk" firstAttribute="bottom" secondItem="f7e-zS-Q39" secondAttribute="bottom" constant="10" id="LyW-nr-y6t"/>
                             <constraint firstItem="AE7-b5-edp" firstAttribute="leading" secondItem="YwR-R9-1sk" secondAttribute="leading" constant="16" id="NQP-fE-av1"/>
                             <constraint firstItem="t6k-CY-2lc" firstAttribute="top" relation="greaterThanOrEqual" secondItem="lkv-A2-V8E" secondAttribute="bottom" constant="24" id="NYh-AE-VWS"/>
                             <constraint firstItem="YwR-R9-1sk" firstAttribute="trailing" secondItem="t6k-CY-2lc" secondAttribute="trailing" constant="228" id="OMa-Pj-EUj"/>
+                            <constraint firstItem="t6k-CY-2lc" firstAttribute="top" secondItem="lkv-A2-V8E" secondAttribute="bottom" constant="24" id="OQf-nf-v7m"/>
                             <constraint firstItem="R8r-Ri-hfx" firstAttribute="leading" secondItem="YwR-R9-1sk" secondAttribute="leading" constant="43" id="OYM-0o-fSd"/>
                             <constraint firstItem="t6k-CY-2lc" firstAttribute="leading" secondItem="AE7-b5-edp" secondAttribute="leading" id="PYF-3j-Ni8"/>
+                            <constraint firstItem="t6k-CY-2lc" firstAttribute="leading" secondItem="f7e-zS-Q39" secondAttribute="leading" id="UYc-IF-l6v"/>
                             <constraint firstItem="YwR-R9-1sk" firstAttribute="trailing" secondItem="AE7-b5-edp" secondAttribute="trailing" constant="16" id="VOX-iE-SNf"/>
                             <constraint firstItem="YwR-R9-1sk" firstAttribute="trailing" secondItem="lkv-A2-V8E" secondAttribute="trailing" constant="31" id="XJ7-c4-ts4"/>
                             <constraint firstItem="R8r-Ri-hfx" firstAttribute="top" secondItem="fYf-Jz-pOs" secondAttribute="bottom" constant="8" id="Yuj-NO-Mm9"/>
                             <constraint firstItem="lkv-A2-V8E" firstAttribute="top" relation="greaterThanOrEqual" secondItem="R8r-Ri-hfx" secondAttribute="bottom" constant="8" id="fzc-Ce-mYQ"/>
-                            <constraint firstItem="f7e-zS-Q39" firstAttribute="top" secondItem="t6k-CY-2lc" secondAttribute="bottom" constant="90" id="gNq-vR-EWu"/>
                             <constraint firstItem="fYf-Jz-pOs" firstAttribute="leading" secondItem="YwR-R9-1sk" secondAttribute="leading" constant="47" id="gcy-PT-QzX"/>
                             <constraint firstItem="YwR-R9-1sk" firstAttribute="trailing" secondItem="R8r-Ri-hfx" secondAttribute="trailing" constant="44" id="sfB-h0-Cgc"/>
                             <constraint firstItem="YwR-R9-1sk" firstAttribute="bottom" secondItem="qG6-OY-rwd" secondAttribute="bottom" constant="10" id="tFc-UM-obc"/>
+                            <constraint firstItem="lkv-A2-V8E" firstAttribute="top" secondItem="nyu-AM-GZm" secondAttribute="top" constant="267" id="vJg-hR-EIy"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="YwR-R9-1sk"/>
                     </view>
