とりあえずエラーハンドリングは終わり

--- a/Heart-up/Base.lproj/Main.storyboard
+++ b/Heart-up/Base.lproj/Main.storyboard
@@ -1053,6 +1053,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="zVW-er-emc"/>
-        <segue reference="UIR-Rk-hcD"/>
+        <segue reference="ypq-AQ-sHG"/>
     </inferredMetricsTieBreakers>
 </document>
